...

    <string name="about_dialog" formatted="false" cc:translatable="true">%s\n\n_Copyright 2016, Dimagi inc, All rights reserved_ \n\n---------------- \n\n__Acknowledgements:__ \n\n%sSome images in CommCare are graciously used under Creative Commons Licensing from thenounproject.com collection:\n\n* “Door” symbol by Tak Imoto \n* “Pencil” symbol by Creologica \n* “Notebook” symbol by Carlo \n* “Ant

</string>

    <string name="hello_world">Please enter your issues below</string>
    <string name="menu_settings">Settings</string>
    <string name="permission_content_provider_label">Read Secure CommCare Data</string>
    <string name="permission_content_provider_description">Allows this app to read data from CommCare while a user is logged in</string>
    <string name="permission_external_action_label">Allow CommCare Actions</string>
    <string name="permission_external_action_description">Allows this app to trigger operations like login, logout and sync in CommCare</string>
    <string name="permission_commcare_logout_label">Allow Auto CommCare Logout</string>
    <string name="permission_commcare_logout_description">Allows this app to logout a user from CommmCare App</string>
...
    <string name="managed_configuration_password">Mobile Worker Password</string>

    <string name="managed_configuration_profile_url">CommCare App Link</string>
    <string name="managed_configuration_username_description">The username of the CommCare mobile worker to login and restore on the device</string>
    <string name="managed_configuration_password_description">The password of the mobile user</string>
    <string name="managed_configuration_profile_url_description">The URL to your CommCare Application from the CommCareHQ publish page</string>
    <string name="about_cc" cc:translatable="true">About CommCare</string>
    <string name="accept_location" cc:translatable="true">Record Location</string>
    <string name="install_barcode_top">Welcome to CommCare!</string>
    <string name="install_barcode_bottom">Please choose an installation method below</string>

    <string name="install_keep_trying">Keep trying if connection is interrupted</string>
    <string name="install_manual">Please enter the URL</string>
...
    <string name="update_major_mismatch" cc:translatable="true">Please uninstall your CommCare Application from the phone Settings Menu, navigate to the Google Playstore, and install CommCare again.</string>
    <string name="update_minor_mismatch" cc:translatable="true">Please update CommCare from the Google Playstore to update this application.</string>
    <string name="app_manager_advanced_settings_title">App Manager &gt; Advanced Settings</string>
    <string name="app_manager_advanced_settings_option">Advanced</string>
    <string name="app_manager_menu_about">About CommCare</string>
    <string name="app_manager_developer_options_title">App Manager &gt; Developer Options</string>
    <string name="app_manager_advanced_developer_options">Developer Options</string>
    <string name="app_manager_developer_options_enabled">CommCare Developer Mode Enabled</string>
    <string name="menu_app_list_install">See Apps for My User</string>
    <string name="menu_app_list_install_other_user">See Apps for Another User</string>
    <string name="toggle_web_user_mode">Web User</string>
    <string name="missing_fields">Please enter all required fields.</string>
    <string name="email_address_invalid">Please enter a valid email address.</string>
...
    <string name="change_language" cc:translatable="true">Change Language</string>
    <string name="clearanswer_confirm" cc:translatable="true">Remove the response to \"%s\"?</string>
    <string name="clear_answer" cc:translatable="true">Remove response</string>
    <string name="clear_answer_ask" cc:translatable="true">Remove This Response?</string>
    <string name="clear_answer_no" cc:translatable="true">CANCEL</string>
    <string name="discard_answer" cc:translatable="true">REMOVE RESPONSE</string>
    <string name="discard_image" cc:translatable="true">Remove Image</string>
    <string name="do_not_exit" cc:translatable="true">STAY IN FORM</string>
    <string name="do_not_save" cc:translatable="true">EXIT WITHOUT SAVING</string>
    <string name="error_occured" cc:translatable="true">Error Occurred</string>
    <string name="file_invalid" cc:translatable="true">File: %s is invalid.</string>
    <string name="file_missing" cc:translatable="true">File: %s is missing.</string>
    <string name="get_location" cc:translatable="true">Record Location</string>
    <string name="invalid_answer_error" cc:translatable="true">Sorry, this response is invalid!</string>
    <string name="jump_to_beginning" cc:translatable="true">Go To Start</string>
...
    <string name="jump_to_previous" cc:translatable="true">Go Up</string>
    <string name="latitude" cc:translatable="true">Latitude</string>
    <string name="loading_form" cc:translatable="true">Loading Form</string>
    <string name="location_provider_accuracy" cc:translatable="true">Location accuracy: %1$s m.</string>
    <string name="longitude" cc:translatable="true">Longitude</string>
    <string name="no_items_display" cc:translatable="true">Nothing available to display.</string>
    <string name="ok" cc:translatable="true">OK</string>
    <string name="parse_error" cc:translatable="true">Sorry, unable to parse form.</string>
    <string name="play_audio" cc:translatable="true">Play Sound</string>
    <string name="play_video" cc:translatable="true">Play Video</string>
    <string name="please_wait" cc:translatable="true">Please wait a few moments.</string>
    <string name="please_wait_long" cc:translatable="true">Please wait. This could take a few minutes.</string>
    <string name="quit_application" cc:translatable="true">Exit %s</string>
...
    </string-array>
    <string-array name="pref_enabled_vals">
        <item>yes</item>
        <item>no</item>
    </string-array>
    <string-array name="pref_enabled_labels">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pref_password_show_options_labels">
        <item>Always Hidden</item>
        <item>Default Show</item>
        <item>Default Hide</item>
    </string-array>
...
        <item>default_show</item>
        <item>default_hide</item>
    </string-array>
    <string-array name="update_target_labels">
        <item>Latest starred version</item>
        <item>Latest version</item>
        <item>Latest saved state</item>
    </string-array>
    <string-array name="update_target_vals">
        <item>release</item>
        <item>build</item>
        <item>save</item>
    </string-array>
...
