<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.ListPreference
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-superuser-enabled"
        android:title="Developer Mode Enabled"/>
    <androidx.preference.ListPreference
        android:defaultValue="no"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-show-update-target-options"
        android:title="Show Update Options Item"/>
    <androidx.preference.ListPreference
        android:defaultValue="yes"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-action-nav-enabled"
        android:title="Action Bar Enabled"/>
    <androidx.preference.ListPreference
        android:defaultValue="yes"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-nav-ui-enabled"
        android:title="Navigation UI"/>
    <androidx.preference.ListPreference
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-list-refresh"
        android:title="Entity List Screen Auto-Refresh"/>
    <androidx.preference.ListPreference
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-enable-auto-login"
        android:title="Auto-login While Debugging"/>
    <androidx.preference.ListPreference
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-enable-session-saving"
        android:title="Enable Session Saving"/>
    <EditTextPreference
        android:dialogTitle="Edit Saved Session"
        android:enabled="true"
        android:key="__edit_session_save"
        android:title="Edit Saved Session"/>
    <androidx.preference.ListPreference
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-css-enabled"
        android:title="CSS Enabled"/>
    <androidx.preference.ListPreference
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-markdown-enabled"
        android:title="Markdown Enabled"/>
    <androidx.preference.ListPreference
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-alternate-question-text-format"
        android:title="Image Above Question Text Enabled"/>
    <androidx.preference.ListPreference
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-home-report"
        android:title="Home Report Button enabled"/>
    <androidx.preference.ListPreference
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-offer-pin-for-login"
        android:title="Give option to use PIN for login"/>
    <androidx.preference.ListPreference
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-auto-purge"
        android:title="Detect and Trigger Purge on Form Save"/>
    <androidx.preference.ListPreference
        android:defaultValue="saved"
        android:enabled="true"
        android:entries="@array/pref_load_form_payload_as_labels"
        android:entryValues="@array/pref_load_form_payload_as_vals"
        android:key="cc-form-payload-status"
        android:title="Load form payload status"/>
    <androidx.preference.ListPreference
        android:defaultValue="default"
        android:enabled="true"
        android:entries="@array/pref_audio_quality_profile_labels"
        android:entryValues="@array/pref_audio_quality_profile_vals"
        android:key="cc-audio-quality-profile"
        android:title="Default Audio Quality"/>
    <org.commcare.preferences.FilePreference
        android:defaultValue=""
        android:enabled="true"
        android:key="cc-local-form-payload-file-path"
        android:title="Local Form Payload File"
        app:file_type="xml"/>
    <EditTextPreference
        android:defaultValue=""
        android:enabled="true"
        android:key="remote-form-payload-url"
        android:title="Form Payload Server"/>
    <androidx.preference.ListPreference
        android:defaultValue="yes"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-detail-final-swipe-enabled"
        android:title="Enable swipe in/out of case detail tabs"/>
    <androidx.preference.ListPreference
        android:defaultValue="no"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-use-root-menu-as-home-screen"
        android:title="Use root module menu as home screen"/>
    <androidx.preference.ListPreference
        android:defaultValue="no"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-show-entity-trace-outputs"
        android:title="Output Entity List Trace Data to ADB"/>
    <androidx.preference.ListPreference
        android:defaultValue="no"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-use-pw-obfuscation"
        android:title="Use Password Obfuscation"/>
    <org.commcare.preferences.FilePreference
        android:defaultValue=""
        android:enabled="true"
        android:key="cc-custom-restore-doc-location"
        android:title="Restore a custom user XML data file"
        app:file_type="xml"/>
    <androidx.preference.ListPreference
        android:defaultValue="no"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-enable-bulk-performance"
        android:title="Enable cutting-edge performance improvements"/>
    <androidx.preference.ListPreference
        android:defaultValue="no"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-hide-issue-report"
        android:title="Hide the 'Report an Issue' Menu Option"/>
    <androidx.preference.ListPreference
        android:defaultValue="no"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-enforce-secure-endpoint"
        android:title="Enforce Secure Endpoint"/>
    <androidx.preference.ListPreference
        android:defaultValue="yes"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-allow-space-in-select-choices"
        android:title="Allow Space in Select Choices"/>
    <androidx.preference.ListPreference
        android:defaultValue="no"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-enable-certificate-transparency"
        android:title="Certificate Transparency"/>
    <EditTextPreference
        android:dialogMessage="The URL must use the HTTPS protocol"
        android:enabled="true"
        android:key="log_receiver_url"
        android:title="Override Log Submission Server"/>
</PreferenceScreen>
