...
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/content_start"
            android:layout_marginLeft="@dimen/content_start"
            android:layout_marginRight="@dimen/content_start"
            android:layout_marginStart="@dimen/content_start"
            android:layout_toEndOf="@id/nav_btn_prev"
            android:layout_toLeftOf="@+id/nav_btn_next"
            android:layout_toRightOf="@id/nav_btn_prev"
            android:layout_toStartOf="@+id/nav_btn_next"
            android:layout_width="wrap_content"
            android:max="100"
            android:paddingBottom="@dimen/progressbar_vertical_padding"
            android:paddingTop="@dimen/progressbar_vertical_padding"
...
